--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="rock paper scissors lizard spock game against a computer that gets harder as you win">
+    <meta name="keywords" content="rock paper scissors lizard spock, game, against computer, gets harder, variable difficulty, 5 way rock paper scissors">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>RPSLS Game</title>
 </head>
 <body>
     <script src="assets/js/script.js"></script>
