add placeholder game buttons and h1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>RPSLS Game</title>
 </head>
 <body>
+    <h1>RPSLS Game</h1>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <button id="lizard">Lizard</button>
+    <button id="spock">Spock</button>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
