add author metatag, add score and difficulty labels to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="rock paper scissors lizard spock game against a computer that gets harder as you win">
     <meta name="keywords" content="rock paper scissors lizard spock, game, against computer, gets harder, variable difficulty, 5 way rock paper scissors">
+    <meta name="author" content="James Leonard">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>RPSLS Game</title>
 </head>
@@ -16,6 +17,10 @@
     <button id="scissors">Scissors</button>
     <button id="lizard">Lizard</button>
     <button id="spock">Spock</button>
+    <aside>
+        <p>score:<span id="score"></span></p>
+        <p>difficulty:<span id="difficulty"></span></p>
+    </aside>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
