begin script to detect a win, loss or draw and respond accordingly

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input name="GameButton" id="spock" value="Spock" type="radio">
         <input type="submit" id="submit" value="Go!">
     </form>
+    <div id="results-box"></div>
     <aside>
         <p>score:<span id="score"></span></p>
         <p>difficulty:<span id="difficulty"></span></p>
