update win to track score, counting wins

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </form>
     <div id="results-box"></div>
     <aside>
-        <p>score:<span id="score"></span></p>
+        <p>score:<span id="score">0</span></p>
         <p>difficulty:<span id="difficulty"></span></p>
     </aside>
     <script src="assets/js/script.js"></script>
