fix difficulty to allow rerolls without looping

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input name="GameButton" id="rock" value="Rock" type="radio">
             <label for="paper">paper</label>
             <input name="GameButton" id="paper" value="Paper" type="radio">
-            <label for="scissosr">scissors</label>
+            <label for="scissors">scissors</label>
             <input name="GameButton" id="scissors" value="Scissors" type="radio">
             <label for="lizard">lizard</label>
             <input name="GameButton" id="lizard" value="Lizard" type="radio">
