update score tracking so highscore is tracked and score cannot drop below 0

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div id="results-box"></div>
     </main>
     <aside id="number-tracker">
-        <p>score:<span id="score">0</span></p>
+        <p>current score:<span id="score">0</span></p>
+        <p>highscore:<span id="high-score">0</span></p>
         <p>difficulty:<span id="difficulty"></span></p>
     </aside>
     <section id="rules">
