add difficulty tracking on game, add button to reset difficulty

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <aside id="number-tracker">
         <p>current score:<span id="score">0</span></p>
         <p>highscore:<span id="high-score">0</span></p>
-        <p>difficulty:<span id="difficulty"></span></p>
+        <p>difficulty:<span id="difficulty-tracker">Normal</span></p>
+        <button type="button" name="reset-button" id="reset-button">Reset difficulty</button>
     </aside>
     <section id="rules">
         <p>
