--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
 </head>
 <body>
     <main>
-        <h1>RPSLS Game</h1>
-        <form id="game-form" action="" method="POST" onsubmit="roll(event)">
-            <label for="rock">rock</label>
-            <input name="GameButton" id="rock" value="Rock" type="radio">
-            <label for="paper">paper</label>
-            <input name="GameButton" id="paper" value="Paper" type="radio">
-            <label for="scissors">scissors</label>
-            <input name="GameButton" id="scissors" value="Scissors" type="radio">
-            <label for="lizard">lizard</label>
-            <input name="GameButton" id="lizard" value="Lizard" type="radio">
-            <label for="spock">spock</label>
-            <input name="GameButton" id="spock" value="Spock" type="radio">
-            <input type="submit" id="submit" value="Go!">
-        </form>
+        <header class="header">
+            <h1>RPSLS Game</h1>
+        </header>
+        <div class="game-area">
+            <form id="game-form" action="" method="POST" onsubmit="roll(event)">
+                <label for="rock">rock</label>
+                <input name="GameButton" id="rock" value="Rock" type="radio">
+                <label for="paper">paper</label>
+                <input name="GameButton" id="paper" value="Paper" type="radio">
+                <label for="scissors">scissors</label>
+                <input name="GameButton" id="scissors" value="Scissors" type="radio">
+                <label for="lizard">lizard</label>
+                <input name="GameButton" id="lizard" value="Lizard" type="radio">
+                <label for="spock">spock</label>
+                <input name="GameButton" id="spock" value="Spock" type="radio">
+                <input type="submit" id="submit" value="Go!">
+            </form>
+        </div>
         <div id="results-box"></div>
     </main>
     <aside id="number-tracker">
@@ -35,6 +39,7 @@
         <button type="button" name="reset-button" id="reset-button">Reset difficulty</button>
     </aside>
     <section id="rules">
+        <h2>RULES:</h2>
         <p>
             Rock beats Scissors and Lizard<br>
             Paper beats Rock and Spock<br>
