solve an issue that let the game run when the player selected nothing and fix typos that let certain options win when they should have lost

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input name="GameButton" id="lizard" value="Lizard" type="radio">
                 <label for="spock">spock</label>
                 <input name="GameButton" id="spock" value="Spock" type="radio">
-                <input type="submit" id="submit" value="Go!">
+                <input type="submit" id="submit" value="Go!" required>
             </form>
         </div>
         <div id="results-box"></div>
