place label text inside circles

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         </header>
         <div class="game-area">
             <form id="game-form" action="" method="POST" onsubmit="roll(event)">
-                <label for="rock">rock</label>
+                <label for="rock"><div class="circle">rock</div></label>
                 <input name="GameButton" id="rock" value="Rock" type="radio">
-                <label for="paper">paper</label>
+                <label for="paper"><div class="circle">paper</div></label>
                 <input name="GameButton" id="paper" value="Paper" type="radio">
-                <label for="scissors">scissors</label>
+                <label for="scissors"><div class="circle">scissors</div></label>
                 <input name="GameButton" id="scissors" value="Scissors" type="radio">
-                <label for="lizard">lizard</label>
+                <label for="lizard"><div class="circle">lizard</div></label>
                 <input name="GameButton" id="lizard" value="Lizard" type="radio">
-                <label for="spock">spock</label>
+                <label for="spock"><div class="circle">spock</div></label>
                 <input name="GameButton" id="spock" value="Spock" type="radio">
                 <input type="submit" id="submit" value="Go!" required>
             </form>
